--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,116 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@media (max-width: 575.98px) {
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%; }
+  .row {
+    margin-right: 0;
+    margin-left: 0; }
+  .col-9 {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    flex: none !important;
+    max-width: none !important; }
+  .header-section {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    height: 500px !important; }
+    .header-section nav {
+      margin-top: 50px !important; }
+      .header-section nav .nav-link {
+        margin: 0;
+        font-weight: 500;
+        color: #fff; }
+    .header-section .hero-section .hero-slogan span {
+      font-size: 22px !important; }
+    .header-section .hero-section .hero-description {
+      font-family: Poppins;
+      font-size: 16px !important; }
+    .header-section .search-form {
+      margin: 0;
+      padding: 0; }
+      .header-section .search-form .input-group {
+        margin: 0;
+        padding: 0; }
+        .header-section .search-form .input-group input[type="search"] {
+          height: 50px !important;
+          padding-left: 20px !important; }
+        .header-section .search-form .input-group .input-group-append .input-group-text {
+          font-size: 16px !important;
+          width: 100% !important; }
+    .header-section::after {
+      top: 100%;
+      height: 90px !important; }
+  main .courses {
+    background-color: #faf6f2;
+    margin: 0;
+    padding: 0;
+    height: 700px; }
+  main .why-opdemy {
+    margin: 0;
+    padding: 0; }
+    main .why-opdemy .title {
+      font-size: 40px !important; }
+    main .why-opdemy tr, main .why-opdemy td {
+      margin: 0 !important;
+      padding: 0 !important; }
+    main .why-opdemy .visible {
+      margin: 0 !important;
+      padding: 0 !important;
+      width: 100vw;
+      display: none; }
+  main .mentor-section {
+    height: 623px;
+    background-color: #faf6f2; }
+    main .mentor-section .h1 {
+      font-size: 28px;
+      font-weight: 600;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center; }
+  main .android-app-section .h2 {
+    font-size: 20px; }
+  main .android-app-section .h1 {
+    font-size: 28px; }
+  main .android-app-section .google-play {
+    height: 40px !important;
+    width: 100%;
+    margin: 0 !important; }
+  .slick-prev {
+    left: -11.5% !important; }
+  .slick-next {
+    right: 16px !important; }
+  .slick-slide {
+    margin-left: 30px;
+    margin-right: 30px; }
+  .navbar-toggler-icon {
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff; } }
+
 * {
   font-family: Poppins; }
 
 .header-section {
   background-image: url("../img/group-11.png");
   background-size: cover;
-  height: 750px; }
-  .header-section nav .nav-link {
-    margin-top: 66px;
-    margin-right: 23px;
-    font-weight: 500;
-    color: #fff; }
-  .header-section nav .login-btn {
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 500;
-    border: 2px solid #fff; }
+  height: 750px;
+  position: relative; }
+  .header-section nav {
+    margin-top: 66px; }
+    .header-section nav .nav-link {
+      margin-right: 23px;
+      font-weight: 500;
+      color: #fff; }
+    .header-section nav .login-btn {
+      font-family: Poppins;
+      font-size: 16px;
+      font-weight: 500;
+      border: 2px solid #fff; }
   .header-section .hero-section .hero-slogan span {
     display: block;
     font-family: Poppins;
@@ -48,18 +143,25 @@
     justify-content: center;
     align-items: center;
     color: #006afb; }
+  .header-section::after {
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 165px;
+    display: block;
+    background-color: #00008b;
+    left: 0;
+    bottom: 0; }
 
 main .courses {
   background-color: #faf6f2;
   margin: 0;
   padding: 0;
-  height: 700px;
-  width: 100vw; }
+  height: 700px; }
 
 main .why-opdemy {
   margin: 0;
-  padding: 0;
-  width: 100vw; }
+  padding: 0; }
   main .why-opdemy .title {
     margin-top: 50px;
     text-align: center;
@@ -71,8 +173,6 @@ main .why-opdemy {
     line-height: normal;
     letter-spacing: normal;
     color: #000000; }
-  main .why-opdemy .course-option {
-    list-style: none; }
 
 main .mentor-section {
   height: 623px;
@@ -93,15 +193,11 @@ main .android-app-section {
   overflow: hidden; }
 
 .footer {
-  width: 100vw;
   height: 124px;
   background-color: #130055;
   z-index: 1; }
 
 .bg-dark-blue {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
   background-color: #130055;
   height: 165px; }
 
@@ -120,13 +216,16 @@ main .android-app-section {
   margin-top: 4rem !important; }
 
 .slick-prev {
-  top: 25%;
   left: -10%; }
 
 .slick-next {
-  top: 25%;
   right: -25px; }
 
 .slick-slide {
   margin-left: 30px;
   margin-right: 30px; }
+
+.navbar-toggler-icon {
+  font-size: 30px;
+  font-weight: bold;
+  color: #fff; }
