--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "responsive";
 *{
     font-family: Poppins;
-    // overflow: hidden;
 }
 
 .header-section{
     background-image: url("../img/group-11.png");
     background-size: cover;
     height: 750px;
-
-    
+    position: relative;
     nav{
+        margin-top: 66px;
       .nav-link{
-            margin-top: 66px;
             margin-right: 23px;
             font-weight: 500;
             color: #fff;
@@ -74,6 +73,16 @@
         }
       
     }
+    &::after{
+        content: " ";
+        position: absolute;
+        width: 100%;
+        height: 165px;
+        display: block;
+        background-color: #00008b;
+        left: 0;
+        bottom:0;
+    }
 }
 
 main{
@@ -82,14 +91,10 @@ main{
         margin: 0;
         padding: 0;
         height: 700px;
-        width: 100vw;
-       
-        
     }
     .why-opdemy{
         margin: 0;
         padding: 0;
-        width: 100vw;
         .title{
             margin-top: 50px;
             text-align: center;
@@ -102,8 +107,8 @@ main{
             letter-spacing: normal;
             color: #000000;
         }
-        .course-option{
-            list-style: none;
+        table{
+            
         }
     }
 
@@ -126,14 +131,12 @@ main{
         background-size: cover;
         height: 536px;
         overflow: hidden;
-      
     }
    
 }
 
 
 .footer{
-  width: 100vw;
   height: 124px;
   background-color: #130055;
   z-index: 1;
@@ -142,9 +145,6 @@ main{
 
 
 .bg-dark-blue{
-  margin: 0;
-  padding: 0;
-  width: 100vw;
   background-color: #130055;  
   height: 165px;
 }
@@ -166,14 +166,17 @@ main{
 }
 
 .slick-prev {
-    top:25%;
     left: -10%;
 }
 .slick-next {
-    top:25%;
     right: -25px;
 }
 .slick-slide {
     margin-left: 30px;
     margin-right: 30px;
+}
+.navbar-toggler-icon{
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
 }
