--- a/scss/base.scss
+++ b/scss/base.scss
@@ -107,9 +107,7 @@ main{
             letter-spacing: normal;
             color: #000000;
         }
-        table{
-            
-        }
+
     }
 
     .mentor-section{
@@ -179,4 +177,9 @@ main{
     font-size: 30px;
     font-weight: bold;
     color: #fff;
+}
+
+.mentor-img{
+    height: 48px;
+    width: 48px;
 }
