--- a/css/styles.css
+++ b/css/styles.css
@@ -229,3 +229,7 @@ main .android-app-section {
   font-size: 30px;
   font-weight: bold;
   color: #fff; }
+
+.mentor-img {
+  height: 48px;
+  width: 48px; }
