added some class and responsive css

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -136,6 +136,11 @@
     color: #fff;
 }
 
+// .course-image{
+//   height: 100px !important;
+//   width: 220px !important;
+// }
+
 }
 
 // Small devices (landscape phones, 576px and up)
