--- a/scss/base.scss
+++ b/scss/base.scss
@@ -183,3 +183,22 @@ main{
     height: 48px;
     width: 48px;
 }
+
+.content-icon{
+    border-radius: 50%;
+     height: 48px; 
+     width: 46px;
+}
+.content-image{
+    width: 366px;
+    height: 376px;
+}
+
+.logo{
+    margin-left: 50px;
+     margin-top: 38px
+}
+
+.course-image{
+    height: 175px;
+}
