--- a/css/styles.css
+++ b/css/styles.css
@@ -233,3 +233,19 @@ main .android-app-section {
 .mentor-img {
   height: 48px;
   width: 48px; }
+
+.content-icon {
+  border-radius: 50%;
+  height: 48px;
+  width: 46px; }
+
+.content-image {
+  width: 366px;
+  height: 376px; }
+
+.logo {
+  margin-left: 50px;
+  margin-top: 38px; }
+
+.course-image {
+  height: 175px; }
