--- a/scss/base.scss
+++ b/scss/base.scss
@@ -202,3 +202,12 @@ main{
 .course-image{
     height: 175px;
 }
+
+
+.limit-character {
+    display: block;
+    width: 172px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
